[package]
name = "disp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
bincode = "1.3.3"
bytes = "1.1.0"
emulator_6502 = "1.1.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
multihash = "0.18.1"
serde = { version = "1.0.139", features = ["derive"] }
thiserror = "1.0.31"

hashdb = { path = "hashdb/" }
anyhow = "1.0.58"
rustyline = "11.0.0"
rkyv = { version = "0.7", features = ["validation"] }
derivative = "2.2.0"
either = "1.7.0"
chumsky = { git = "https://github.com/zesterer/chumsky", default-features = false, features = ["nightly", "label"] }
smallvec = "1.9.0"
ariadne = "0.2.0"

[features]

[workspace]
members = [
	# "examples/test6502",
]

[package.metadata.nix]
app = true
build = true
