[package]
name = "disp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.1"
indexmap = "2.7.0"
iter-enum = "1.2.0"
itertools = "0.13.0"
rustyline-async = "0.4.6"
slotmap = "1.0.7"
smallvec = "2.0.0-alpha.11"
thiserror = "2.0.9"
winnow = "0.6.20"
