[package]
name = "hashdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
bincode = "1.3.3"
bytes = "1.1.0"
digest = "0.10.1"
multihash = "0.15.0"
rkyv = { version = "0.7.31", features = ["validation"] }
bytecheck = "0.6.7"
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.30"
unsigned-varint = "0.7.1"
derivative = "2.2.0"

[features]
