[package]
name = "hashdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.1.0"
digest = "0.10.3"
multihash = "0.16.1"
rkyv = { version = "0.7", git = "https://github.com/rkyv/rkyv", features = ["validation"] }
bytecheck = "0.6.7"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
unsigned-varint = "0.7.1"
derivative = "2.2.0"
bs58 = "0.4.0"
futures = { version = "0.3.21", optional = true }

[features]
async = ["futures"]
default = ["async"]
