[package]
name = "hashdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
bytes = "1.1"
digest = "0.10"
multihash = "0.18.1"
rkyv = { version = "0.7", features = ["validation"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
unsigned-varint = "0.7"
derivative = "2.2"
bs58 = "0.4"
futures = { version = "0.3", optional = true }
bumpalo = "3.10"
hashdb_derive = { path = "./hashdb_derive" }

[features]
async = ["futures"]
default = ["async"]
