[package]
name = "rust-ca-lattice"
version = "0.0.0"
edition = "2021"
description = "64-bit six-neighbor cellular substrate for disp tree-calculus interaction nets"
license = "MIT"

# Native library and tests. A Session ABI wrapper can be added after the packed runner covers
# the complete interaction ROM.
[lib]
crate-type = ["rlib"]

[profile.release]
opt-level = 3
