[package]
name = "rust-eager"
version = "0.0.0"
edition = "2021"
description = "rust-eager: a sequential hash-consed eager tree-calculus reducer for disp (Rust→WASM Session backend)"
license = "MIT"

[lib]
# cdylib ⇒ a freestanding .wasm with C ABI exports the disp Session wrapper calls.
# rlib ⇒ the native CLI bin (src/bin/eager-cli.rs) can link the lib — the fair
# native-subprocess baseline for the rust-ic-net benchmark (M2d).
crate-type = ["cdylib", "rlib"]

[dependencies]
# SwissTable, for the hash-cons intern table (HashTable<u32> = id-only storage,
# compare-through-`nodes`, keeping the half-arena memory win). default-features = false
# drops ahash (needs runtime entropy wasm32-unknown-unknown lacks).
hashbrown = { version = "0.15", default-features = false }
# FxHash: the deterministic, dependency-light hasher for the forced/memo maps + the
# intern table's node hashing (replaces the hand-rolled FxHasher; same algorithm family).
rustc-hash = "2"
# Optional memo backend (cargo feature `memo-quickcache`): quick_cache::unsync, an S3-FIFO
# scan-resistant cache. default-features = false drops ahash (would pull getrandom, which
# wasm32-unknown-unknown lacks); we supply FxHash explicitly. The `memo-clock` backend (a
# hand-rolled CLOCK) needs no dependency. See src/memo.rs.
quick_cache = { version = "0.6", default-features = false, optional = true }

[features]
default = []
memo-watermark = []                      # FxHashMap; clear() keeps kernel-keyed (low-id) entries
memo-quickcache = ["dep:quick_cache"]    # quick_cache::unsync (S3-FIFO)
memo-clock = []                          # hand-rolled CLOCK / second-chance (no deps)

[profile.release]
opt-level = 3
lto = true
panic = "abort"     # no unwinding across the wasm boundary; budget exhaustion is a sentinel return, not a panic
